[tool.isort]
profile = "black"
# distutils is leaving stdlib. setuptools provides a compatibility import, but needs to be imported first
known_thirdparty = ["distutils"]
known_setuptools = ["setuptools"]
sections = ["FUTURE", "STDLIB", "SETUPTOOLS", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
addopts = "-s --tb=short"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
write_to = "cppimport/_version.py"
